--- a/connororton.html
+++ b/connororton.html
@@ -44,7 +44,7 @@
       <div class="row">
         <div class="mx-auto p-4 col-lg-7">
           <h1 class="mb-4">Contact Form</h1>
-          <form action="https://formspree.io/connor1994@hotmail.com">
+          <form action="https://formspree.io/connor1994@hotmail.com" method="POST">
             <div class="form-row">
               <div class="form-group col-md-6"> <input type="text" class="form-control" id="form27" placeholder="Name" required="required"> </div>
               <div class="form-group col-md-6"> <input type="email" class="form-control" id="form28" placeholder="Email" required="required"> </div>
