--- a/connororton.html
+++ b/connororton.html
@@ -46,11 +46,11 @@
           <h1 class="mb-4">Contact Form</h1>
           <form action="https://formspree.io/f/mjvjadeg" method="POST">
             <div class="form-row">
-              <div class="form-group col-md-6"> <input type="text" class="form-control" id="form27" placeholder="Name" required="required"> </div>
-              <div class="form-group col-md-6"> <input type="email" class="form-control" id="form28" placeholder="Email" required="required"> </div>
+              <div class="form-group col-md-6"> <input type="text" class="form-control" id="form27" name="Name" placeholder="Name" required="required"> </div>
+              <div class="form-group col-md-6"> <input type="email" class="form-control" id="form28" name="Email" placeholder="Email" required="required"> </div>
             </div>
-            <div class="form-group"> <input type="text" class="form-control" id="form29" placeholder="Subject" required="required"> </div>
-            <div class="form-group"> <textarea class="form-control" id="form30" rows="3" placeholder="Your message"></textarea> </div> <button type="submit" class="btn btn-primary">Send</button>
+            <div class="form-group"> <input type="text" class="form-control" id="form29" name="Subject" placeholder="Subject" required="required"> </div>
+            <div class="form-group"> <textarea class="form-control" id="form30" rows="3" name="Your Message" placeholder="Your message"></textarea> </div> <button type="submit" class="btn btn-primary">Send</button>
           </form>
         </div>
       </div>
