--- a/connororton.html
+++ b/connororton.html
@@ -32,8 +32,8 @@
         <div class="col-md-6"> <img class="img-fluid d-block" src="assets/Selfies/Connor_Orton.jpg"> </div>
         <div class="px-md-5 p-3 col-md-6 d-flex flex-column justify-content-center">
           <h1>Connor Orton</h1>
-          <h3 contenteditable="true">Aspiring Games Developer</h3>
-          <p class="mb-3 lead">Welcome to my portfolio page.&nbsp;<br></p>
+          <h3>Game Designer &amp; Programmer</h3>
+          <p class="mb-3 lead">I am a passionate video game developer who specializes in design and programming. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to experience. Find my CV and portfolio on this page and contact me if you are interested in hiring me.</p>
           <a class="btn btn-primary" href="assets/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a>
         </div>
       </div>
@@ -44,13 +44,13 @@
       <div class="row">
         <div class="mx-auto p-4 col-lg-7">
           <h1 class="mb-4">Contact Form</h1>
-          <form action="https://formspree.io/f/mjvjadeg" method="POST">
+          <form action="https://formspree.io/f/mjvjadeg">
             <div class="form-row">
-              <div class="form-group col-md-6"> <input type="text" class="form-control" id="form27" name="Name" placeholder="Name" required="required"> </div>
-              <div class="form-group col-md-6"> <input type="email" class="form-control" id="form28" name="Email" placeholder="Email" required="required"> </div>
+              <div class="form-group col-md-6"> <input type="text" class="form-control" id="form27" placeholder="Name" required="required" name="Name"> </div>
+              <div class="form-group col-md-6"> <input type="email" class="form-control" id="form28" placeholder="Email" required="required" name="Email"> </div>
             </div>
-            <div class="form-group"> <input type="text" class="form-control" id="form29" name="Subject" placeholder="Subject" required="required"> </div>
-            <div class="form-group"> <textarea class="form-control" id="form30" rows="3" name="Your Message" placeholder="Your message"></textarea> </div> <button type="submit" class="btn btn-primary">Send</button>
+            <div class="form-group"> <input type="text" class="form-control" id="form29" placeholder="Subject" required="required" name="Subject"> </div>
+            <div class="form-group"> <textarea class="form-control" id="form30" rows="3" placeholder="Your message" name="Your message"></textarea> </div> <button type="submit" class="btn btn-primary">Send</button>
           </form>
         </div>
       </div>
