--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" alt="Card image cap" src="assets/Selfies/Connor_Orton.jpg">
+        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
           <h4 class="bg-secondary"> <b>Connor Orton</b>
-            <p class="lead py-1">Project Leader, Games Programmer</p>
+            <p class="lead py-1">Game Designer &amp; Programmer</p>
           </h4>
           <p class="mb-0 bg-primary px-2 py-2" style="">Connor is the founder and games programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project production pipeline.&nbsp;<br></p><a class="btn btn-primary my-2" href="connororton.html" style="">Portfolio &amp; CV</a>
         </div>
-        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Selfies/Natalie_Smith.jpeg">
+        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Portrait/Natalie_Smith.jpeg">
           <h4 class="bg-secondary"> <b>Natalie Smith</b>
             <p class="lead py-1">2D Artist</p>
           </h4>
@@ -84,13 +84,13 @@
         <div class="col-lg-4" style="">
           <div class="carousel slide" data-ride="carousel" id="carousel_ppa">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block img-fluid w-100 mx-auto" src="assets/Portfolio/PPA/PPA_Screenshot1.jpg">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100 mx-auto" src="assets/Portfolio/Shared/PPA/PPA_Screenshot1.jpg">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100 float-left" src="assets/Portfolio/PPA/PPA_Screenshot2.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100 float-left" src="assets/Portfolio/Shared/PPA/PPA_Screenshot2.jpg">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/Portfolio/PPA/PPA_Screenshot3.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/Portfolio/Shared/PPA/PPA_Screenshot3.jpg">
               </div>
-              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/Portfolio/PPA/PPA_Screenshot4.jpg">
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="assets/Portfolio/Shared/PPA/PPA_Screenshot4.jpg">
               </div>
             </div> <a class="carousel-control-prev" href="#carousel_ppa" role="button" data-slide="prev"> <span class="carousel-control-prev-icon"></span> <span class="sr-only">Previous</span> </a> <a class="carousel-control-next" href="#carousel_ppa" role="button" data-slide="next"> <span class="carousel-control-next-icon"></span> <span class="sr-only">Next</span> </a>
           </div>
@@ -108,7 +108,7 @@
         <div class="col-lg-4 py-4">
           <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="5000">
             <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block w-100" src="assets/Fine Chap Games/QuestionMark.png"> </div>
+              <div class="carousel-item active"> <img class="d-block w-100" src="assets/FineChapGames/QuestionMark.png"> </div>
             </div>
           </div>
         </div>
