--- a/connororton.html
+++ b/connororton.html
@@ -26,21 +26,45 @@
       </div>
     </div>
   </nav>
-  <div class="py-3" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-    <div class="container">
+  <div style="">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-6"> <img class="img-fluid d-block" src="assets/Portrait/Connor_Orton.jpg"> </div>
         <div class="px-md-5 p-3 col-md-6 d-flex flex-column justify-content-center">
           <h1>Connor Orton</h1>
           <h3>Game Designer &amp; Programmer</h3>
-          <p class="mb-3 lead">I am a passionate video game developer who specializes in design and programming. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to experience. Find my CV and portfolio on this page and contact me if you are interested in hiring me.</p>
+          <p class="mb-3 lead">I am a passionate video game developer who specializes in design and programming. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to experience. Find my CV and portfolio on this page and contact me using the contact form if you are interested in hiring me.</p>
           <a class="btn btn-primary" href="assets/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a>
         </div>
       </div>
     </div>
   </div>
-  <div class="py-3 text-center" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
-    <div class="container">
+  <div class="py-3" style="">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-lg-8 p-md-5 p-3 d-flex flex-column justify-content-center">
+          <h1><b>Pixel Pinball Arcade (2020)</b></h1>
+          <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity and released for free on the google play store. I developed this game in a team of two which included myself and a 2D artist. It was written in the C# programming language. This was my second project working in a team of two.<br><br><b>My responsibilities were:<br></b>- Designing the game concept, gameplay systems and menus<br>- Asset workflow management<br>- Source control management<br>- Engine asset &amp; scene implementation<br>- Writing game system, menu and gameplay scripts<br>- Audio development</p><a class="btn btn-success my-3" href="#">Pixel Pinball Arcade</a>
+        </div>
+        <div class="col-lg-4 p-3">
+          <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="5000">
+            <div class="carousel-inner">
+              <div class="carousel-item active"> <img class="d-block w-100" src="assets/Portfolio/Shared/PPA/PPA_Screenshot1.jpg"> </div>
+              <div class="carousel-item"> <img class="d-block w-100" src="assets/Portfolio/Shared/PPA/PPA_Screenshot2.jpg"> </div>
+              <div class="carousel-item"> <img class="d-block w-100" src="assets/Portfolio/Shared/PPA/PPA_Screenshot3.jpg"> </div>
+              <div class="carousel-item"> <img class="d-block w-100" src="assets/Portfolio/Shared/PPA/PPA_Screenshot4.jpg"> </div>
+            </div>
+            <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span></a>
+            <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-3 text-center" style="">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="mx-auto p-4 col-lg-7">
           <h1 class="mb-4">Contact Form</h1>
