--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="row pb-0 pt-2" style="">
         <div class="col-md-12 col-lg-12">
           <h1 class="text-center py-3 bg-secondary">About Us</h1>
-          <p style="" class="my-2 bg-primary py-4 px-3">Fine Chap Games is a newly established indie games development company comprising of two members who are a couple. We have released a single game so far on the google play store and we have many ideas and games to be released in the near future. We mainly develop 2D pixel art style games but we have plans to venture into 3D development eventually.</p>
+          <p style="" class="my-2 bg-primary py-4 px-3">Fine Chap Games is a newly established indie games development company comprising of two members. We've only released one game so far on the google play store but we plan on releasing several more inovative and enjoyable games in the near future. We mainly develop 2D games but we have plans to venture into 3D development eventually. Find our portfolios and CVs below if you are looking to hire.</p>
         </div>
       </div>
     </div>
@@ -52,13 +52,13 @@
           <h4 class="bg-secondary"> <b>Connor Orton BSC</b>
             <p class="lead py-1">Game Designer &amp; Programmer</p>
           </h4>
-          <p class="mb-0 bg-primary px-2 py-2" style="">Connor is the games designer and programmer for Fine Chap Games. His responsibilities are design and create game systems and features written in C# programming language, manage and implement game assets and oversee the project production pipeline.&nbsp;<br></p><a class="btn btn-primary my-2" href="connororton.html" style="">Portfolio &amp; CV</a>
+          <p class="mb-0 bg-primary px-2 py-2" style="">Connor is a games designer and programmer. He has been passionate about games production since an early age who started out using RPG Maker 2000 to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2" href="connororton.html" style="">Portfolio &amp; CV</a>
         </div>
         <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Portrait/Natalie_Smith.jpeg">
           <h4 class="bg-secondary"> <b>Natalie Smith</b>
             <p class="lead py-1">2D Artist</p>
           </h4>
-          <p class="mb-0 bg-primary px-2 py-2">Natalie is the 2D artist for Fine Chap Games. Her responsibilities include creating various game art concepts and art assets that will be implemented inside the game engine by using a variety of different software tools such as Photoshop, Aseprite, Paint Tool SAI and more.</p><a class="btn btn-primary my-2" href="nataliesmith.html" style="">Portfolio &amp; CV (Under Construction)</a>
+          <p class="mb-0 bg-primary px-2 py-2">Natalie is a 2D digital artist. She has always been passionate about art and never forgets the day she got her first art tablet and pen. Her responsibilities include conceptualizing various game ideas and creating assets based on them using industry standard software and art techniques. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.</p><a class="btn btn-primary my-2" style="">Portfolio &amp; CV (Under Construction)</a>
         </div>
       </div>
     </div>
