--- a/connororton.html
+++ b/connororton.html
@@ -46,7 +46,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-8">
-          <h1><b>Pixel Pinball Arcade (2020)</b></h1>
+          <h1 class="pt-3"><b>Pixel Pinball Arcade (2020)</b></h1>
           <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity and released for free on the google play store. I developed this game in a team of two which included myself and a 2D artist. It was written in the C# programming language. This was my second project working in a team of two.<br><br><b>My responsibilities were:<br></b>- Designing the game concept, gameplay systems and menus<br>- Asset workflow management<br>- Source control management<br>- Engine asset &amp; scene implementation<br>- Writing game system, menu and gameplay scripts<br>- Audio development<br>- Exporting and uploading to the play store</p><a class="btn btn-success my-3" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB">Pixel Pinball Arcade</a>
         </div>
         <div class="col-lg-4 p-3">
@@ -70,13 +70,13 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12">
-          <h1><b>Battle Beasts - RPG Mechanics Asset Pack (2017)</b></h1>
+          <h1 class="pt-3"><b>Battle Beasts - RPG Mechanics Asset Pack (2017)</b></h1>
           <p class="mb-0">Battle Beasts RPG Mechanics asset pack is a collection of RPG mechanics that I created using Unreal Engine 4 with blueprint visual scripting. It was created as part as my programming module on my BSC Games Production undergraduate degree. The game mechanics included are inspired by the Pokemon game franchise. The main mechanics and systems the asset pack includes are:<br><br>- <b>Combat system</b> (Control your beasts against your opponent, use abilities and items to defeat them, features battles against npcs and random encounters.)<br>- <b>Dialogue system</b> (Features multi choice questions and multiple outcomes depending on dialogue choice.)<br>- <b>In-Game database system</b> (For showing the player what beasts exist in the game and if they have captured them)<br>- <b>Engine System databases</b> (To manage units, unit abilities, items etc.)<br>- <b>Shop system</b> (Combined with the dialogue system to allow the player to purchase items using currency from a merchant.)<br>- <b>Bank system</b> (Combined with the dialogue system to store player beasts in a unit storage)<br>- <b>Trade system</b> (Combined with the dialogue system to trade player beasts with NPCs.)<br>-&nbsp;<b>Utility menu</b> (To allow the player to access in-game database, beast team, inventory and options for game preferences.)<br>- <b>Player unit progression</b> (Beasts level up and learn new abilities depending on their level.)</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 px-5 pb-4">
-          <div class="embed-responsive embed-responsive-16by9">
+        <div class="col-md-12 px-5 pb-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
             <video src="assets/Portfolio/Connor/Battle Beasts - RPG Mechanics Asset Pack - Trailer.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -88,13 +88,13 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12">
-          <h1><b>Survival Training VR Simulation (2017)</b></h1>
+          <h1 class="pt-3"><b>Survival Training VR Simulation (2017)</b></h1>
           <p class="mb-0" style="">Survival Training VR is a virtual reality simulator that I created in Unreal Engine 4 with Unreal Blueprint. This project was submitted alongside my dissertation for my BSC games production course. It featured a first person scenario where the player must learn survival skills in a virtual reality environment and answer questions in a quiz. At the end of the simulation the player was informed how they did on the quiz to let them know if they learned from the simulation.<br></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 px-5 pb-4">
-          <div class="embed-responsive embed-responsive-16by9">
+        <div class="col-md-12 px-5 pb-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
             <video src="assets/Portfolio/Connor/Survival Training Vr.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -106,13 +106,13 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12">
-          <h1><b>Isolation Complex - Short Puzzle Game (2017)</b></h1>
+          <h1 class="pt-3"><b>Isolation Complex - Short Puzzle Game (2017)</b></h1>
           <p class="mb-0" contenteditable="true">Isolation complex is a short first person puzzle game that I created in Unreal Engine 4 using Unreal Blueprint. It was created to be submitted alongside my dissertation before I changed my idea to survival training in VR. It features puzzle solving and an inventory system which you can use to combine items.<br></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 px-5 pb-4">
-          <div class="embed-responsive embed-responsive-16by9">
+        <div class="col-md-12 px-5 pb-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
             <video src="assets/Portfolio/Connor/Isolation Complex - Gameplay.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -124,13 +124,13 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12" style="">
-          <h1><b>Once Upon a Castle - Tower Defense Game Demo (2016)</b></h1>
+          <h1 class="py-3"><b>Once Upon a Castle - Tower Defense Game Demo (2016)</b></h1>
           <p class="mb-0" style="">Once Upon a Castle was a tower defense game that I created in Unreal Engine 4 using Unreal Blueprint. It features real time player combat with enemy waves which damage player defenses, resource gathering, tower building which featured the base and the weapon selections and more. Was showcased to students and some industry proffesionals on a showcase day at the end of my first year on my BSC course.<br></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 px-5 pb-4">
-          <div class="embed-responsive embed-responsive-16by9">
+        <div class="col-md-12 px-5 pb-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
             <video src="assets/Portfolio/Connor/Once Upon a Castle - Gameplay.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -142,13 +142,13 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12" style="">
-          <h1><b>Dash and Stack (2015)</b></h1>
+          <h1 class="py-3"><b>Dash and Stack (2015)</b></h1>
           <p class="mb-0" style="">Dash and Stack is an android game created in Unity and written in C#. I developed this project with a friend and it was placed on the google play store for free. I was responsible for designing the game concept and the menu systems. Whilst my partner developed the gameplay mechanics I created the menu system, art and audio assets.<br></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 px-5 pb-4">
-          <div class="embed-responsive embed-responsive-16by9">
+        <div class="col-md-12 px-5 pb-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
             <video src="assets/Portfolio/Connor/Dash and Stack.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
@@ -160,13 +160,13 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12" style="">
-          <h1><b>Operation Health (2D Platformer Demo) (2012)</b></h1>
+          <h1 class="pt-3"><b>Operation Health (2D Platformer Demo) (2012)</b></h1>
           <p class="mb-0" style="">Operation health was a 2d platformer demo that I created using Game Maker using GML. It was used as my final major project during my level 2 creative technologies course. I was asked by my tutor if it could be used as an example for the next year students for what to expect going forward with their own projects.<br></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 px-5 pb-4">
-          <div class="embed-responsive embed-responsive-16by9">
+        <div class="col-md-12 px-5 pb-3">
+          <div class="embed-responsive embed-responsive-16by9 mt-4">
             <video src="assets/Portfolio/Connor/Operation Health.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
