--- a/connororton.html
+++ b/connororton.html
@@ -45,9 +45,9 @@
   <div class="mt-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-8">
+        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-8" style="">
           <h1 class="pt-3"><b>Pixel Pinball Arcade (2020)</b></h1>
-          <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity and released for free on the google play store. I developed this game in a team of two which included myself and a 2D artist. It was written in the C# programming language. This was my second project working in a team of two.<br><br><b>My responsibilities were:<br></b>- Designing the game concept, gameplay systems and menus<br>- Asset workflow management<br>- Source control management<br>- Engine asset &amp; scene implementation<br>- Writing game system, menu and gameplay scripts<br>- Audio development<br>- Exporting and uploading to the play store</p><a class="btn btn-success my-3" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB">Pixel Pinball Arcade</a>
+          <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity and released for free on the google play store. I developed this game in a team of two which included myself and a 2D artist. It was written in the C# programming language. This was my second project working in a team of two.<br><br><b>My responsibilities were:<br></b>- Designing the game concept, gameplay systems and menus<br>- Asset workflow management<br>- Source control management<br>- Engine asset &amp; scene implementation<br>- Writing game system, menu and gameplay scripts<br>- Audio development<br>- Exporting and uploading to the play store</p>
         </div>
         <div class="col-lg-4 p-3">
           <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="5000">
@@ -61,6 +61,24 @@
               <span class="carousel-control-prev-icon" aria-hidden="true"></span></a>
             <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mt-3 pb-3" style="">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+      <div class="row">
+        <div class="p-md-5 justify-content-center d-flex flex-column col-lg-12">
+          <h1 class="pt-3">Pixel Pinball Arcade (2020)</h1>
+          <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity and released for free on the google play store. Inspired by the popular arcade machine pinball. I developed this game in a team of two which included myself and a 2D artist. It was written in the C# programming language. This was my second project working in a team of two.<br><br><b>My responsibilities were:&nbsp;<br></b>- Designing the game concept, gameplay systems and menus&nbsp;<br>- Asset workflow management - Source control management&nbsp;<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store</p><a class="btn btn-success my-3" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB">Pixel Pinball Arcade</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 px-5 pb-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
+            <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item" controls="controls" width="1
+10"> Your browser does not support HTML5 video. </video>
           </div>
         </div>
       </div>
