--- a/connororton.html
+++ b/connororton.html
@@ -29,15 +29,25 @@
   <div class="mt-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="col-md-6" style=""> <img class="d-block img-fluid px-1 pt-3" src="assets/Portrait/Connor_Orton.jpg">
+        <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center mx-auto my-3" src="assets/Portrait/Connor_Orton.jpg" height="300" width="300
+400
+50"></div>
+      </div>
+      <div class="row">
+        <div class="px-md-5 flex-column d-flex justify-content-center" style="">
+          <h1 class="mt-3 text-center"><b>Connor Orton BSc</b></h1>
+          <h3 class="text-center"><b>Game Designer &amp; Programmer</b></h3>
+          <p class="mb-3 lead text-center">I am a passionate and dedicated aspiring video game developer who specializes in programming and design. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have experience with most game engines and industry standard production techniques including programming, 2D &amp; 3D art and animation, audio design and more. Find my CV and portfolio on this page and contact me using the contact form if you are interested in hiring me.</p>
           <div class="row">
-            <div class="col-md-12 pb-2"><a class="btn text-white my-2 mx-auto btn-block btn-lg" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a><a class="btn text-white my-2 mx-auto btn-lg btn-block" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a><a class="btn text-white btn-lg btn-block my-2 mx-auto" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
+            <div class="col-md-4"><a class="btn text-white my-2 mx-auto d-flex justify-content-center btn-lg" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
           </div>
-        </div>
-        <div class="px-md-5 col-md-6 flex-column d-flex justify-content-center" style="">
-          <h1 class="mt-3 text-center">Connor Orton BSc</h1>
-          <h3 class="text-center">Game Designer &amp; Programmer</h3>
-          <p class="mb-3 lead text-center">I am a passionate, dedicated and considerate aspiring video game developer who specializes in programming and design. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have experience with most game engines and industry standard production techniques including programming, 2D &amp; 3D art and animation, audio design and more. Find my CV and portfolio on this page and contact me using the contact form if you are interested in hiring me.</p><a class="btn btn-primary mb-4" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a><a class="btn btn-primary my-3" href="https://www.linkedin.com/in/connororton/">Github Portfolio (C# Projects)</a><a class="btn btn-primary my-3" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a>
+          <div class="row">
+            <div class="col-md-4"><a class="btn btn-primary btn-block btn-lg" href="https://github.com/connor1994">Github Portfolio (C# Projects)</a></div>
+            <div class="col-md-4"><a class="btn btn-primary btn-block btn-lg" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+            <div class="col-md-4"><a class="btn btn-primary btn-block btn-lg mb-3" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
+          </div>
         </div>
       </div>
     </div>
@@ -46,7 +56,7 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 align-items-center d-flex col-lg-12 flex-column text-left justify-content-center">
-          <h1 class="pt-3 text-center">Pixel Pinball Arcade - 2020 (Unity, C#)</h1>
+          <h1 class="pt-3 text-center"><b>Pixel Pinball Arcade - 2020 (Unity, C#)</b></h1>
           <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. I developed this game in a team of two which included myself and a 2D artist. This was my second project working in a team of two.<br><br><b>My responsibilities were:&nbsp;<br></b>- Designing the game concept, gameplay systems and menus&nbsp;<br>- Asset workflow management - Source control management&nbsp;<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store</p><a class="btn btn-success my-3 w-25" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB">Pixel Pinball Arcade</a>
         </div>
       </div>
